--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .container {
     display: flex;
+    justify-content: center;
+}
+
+.container ul {
+    justify-content: center;
     flex-wrap: wrap;
+    display: flex;
 }
