--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -1,38 +1,36 @@
 .card-box {
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     gap: 10px;
-    margin: 10px;
+    margin: 10px 10px;
     cursor: pointer;
-
-    max-width: 500px;
-    min-width: 300px;
-
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    overflow: hidden;
 }
 
-.card-box:last-child {
-    flex-grow: 10;
+.card-box:hover {
+    margin: 10px 10px;
+    transition: transform 0.25s ease-in-out;
+    transform: scale(1.1);
+}
+
+.card-box:active {
+    transition: transform 0.25s ease-in-out;
+    transform: scale(1);
 }
 
 .card-box img {
-    width: 100%;
-    height: auto;
+    min-width: 80%;
+    max-height: 80%;
     object-fit: cover;
-    vertical-align: bottom;
-}
-
-.card-box h3 {
-    margin: 10px 0 0 0;
-    font-size: 1.25rem;
-    font-weight: 600;
+    border-radius: 30px;
 }
 
 .card-box p {
-    margin: 5px 0 10px 0;
     color: gray;
     font-weight: 500;
+}
+
+h3 {
+    color: white;
 }
