--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -1,40 +1,121 @@
-body {
-    margin-left: 10px;
+.detail-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
+    height: 100%;
+    position: relative;
+    transition: 0.25s;
 }
 
+p {
+    color: white;
+}
+
+.img-box {
+    width: 50%;
+    height: 100%;
+}
+.detail__img {
+    width: 80%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.detail__info {
+    padding: 30px 0 10px 30px;
+    width: 50%;
+}
+
+.detail__head {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-right: 20px;
+    margin: 20px 0;
+}
+.detail__head h2 {
+    color: white;
+    font-size: 70px;
+}
+.detail__genre {
+    font-size: 20px;
+    border-radius: 12px;
+    color: white;
+    padding: 20px 0;
+}
+.genre-btn {
+    padding: 8px 12px;
+    border: 1px solid gray;
+    border-radius: 16px;
+    margin-right: 10px;
+}
+
+.detail__overview {
+    padding: 70px 0;
+    font-style: normal;
+    font-color: rgb(255, 255, 255);
+    text-align: justify;
+    font-size: 1.3rem;
+    letter-spacing: -2px;
+    line-height: 30px;
+}
+
+.detail__button {
+    background-color: bisque;
+    margin: 10px 10px;
+
+    border-radius: 12px;
+    width: 100px;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10pxs;
+    color: rgb(0, 0, 0);
+    border: none;
+    transition: 0.25s;
+}
+
+.detail__button:hover {
+    background-color: rgb(128, 109, 86);
+    color: rgb(255, 255, 255);
+    transition: transform 0.25s ease-in-out;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.detail__button:active {
+    background-color: rgb(78, 63, 44);
+    transition: transform 0.25s ease-in-out;
+    transform: scale(1);
+}
+
+.home-link {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
 .home-link button {
     padding: 10px 20px;
     font-size: 20px;
     background-color: transparent;
     cursor: pointer;
-    border: 2px solid black;
-    color: black;
-}
-
-.detail-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.img-box {
-    width: 50%;
-    height: auto;
-}
-
-.detail__info {
-    padding: 30px 10px;
-    width: 50%;
-}
-
-.detail__genre {
-    padding: 15px 0px;
+    border: 2px solid rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
 @media screen and (max-width: 767px) {
+    .detail-container {
+        flex-wrap: wrap;
+    }
     .img-box {
         width: 100%;
+        height: auto;
     }
     .detail__info {
+        padding: 30px 10px;
         width: 100%;
+    }
+    .detail__genre {
+        padding: 15px 0px;
     }
 }
