--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: rgb(0, 0, 0);
 }
 
 body {
@@ -10,4 +11,5 @@ body {
 }
 #root {
     height: 100vh;
+    transition: 0.25s;
 }
