--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -8,7 +8,7 @@
     transition: 0.25s;
 }
 
-p {
+.detail-container p {
     color: white;
 }
 
@@ -19,10 +19,13 @@ p {
 .detail__img {
     width: 80%;
     height: 100%;
+    border-radius: 12px;
     object-fit: cover;
 }
 
 .detail__info {
+    color: white;
+    font-size: 25px;
     padding: 30px 0 10px 30px;
     width: 50%;
 }
