--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,53 +1,251 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 10rem;
+    position: relative;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #000000;
+    background: linear-gradient(to bottom, #6a7c51, rgb(61, 76, 61));
     color: white;
 }
 
 .navbar-left {
     display: flex;
     align-items: center;
+    transform: scale(1.1);
+    margin-right: 80px;
+    background-color: transparent;
 }
 
 .navbar-logo {
     max-width: 50px;
     height: auto;
-    margin-right: 1rem;
+    margin-right: 10px;
+    background-color: transparent;
+}
+
+.navbar-logo:hover {
+    transform: scale(1.1);
+    transition: 0.25s;
 }
 
 .navbar-title {
     font-size: 1.5rem;
-    flex-grow: 1;
-    color: white;
+    margin: 0;
+    transition: 0.25s;
+    background-color: transparent;
+}
+
+.navbar-title:hover {
+    transform: scale(1.1);
 }
 
 .navbar-links {
     list-style: none;
     display: flex;
-    gap: 1rem;
-    justify-content: flex-end;
+    margin-left: 40px;
+    align-items: right;
+    gap: 20px;
+    background-color: transparent;
+}
+
+.navbar-links li {
+    background-color: transparent;
 }
 
 .navbar-links a {
     color: white;
-    border: none;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    background-color: transparent;
     border-radius: 5px;
-    
     text-decoration: none;
     transition: 0.25s;
 }
 
 .navbar-links a:hover {
     border: none;
-
     background-color: rgb(111, 84, 52);
 }
 
 .navbar-links a:active {
     background-color: rgb(61, 55, 46);
+}
+
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+}
+
+.search-input {
+    padding: 8px 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+    margin-right: 10px;
+    transition: 0.25s ease-in-out;
+}
+
+.search-input:hover {
+    width: 300px;
+}
+
+.search-button {
+    background-color: rgb(225, 220, 213);
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    transition: 0.25s ease-in-out;
+}
+
+.search-button:hover {
+    background-color: rgb(198, 182, 168);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+}
+
+.menu-icon.open {
+    background-color: transparent;
+}
+
+.theme-toggle {
+    background-color: transparent;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin-left: 20px;
+    background-color: transparent;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: '';
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #007bff;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #007bff;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+@media (max-width: 1024px) {
+    .detail-container {
+        flex-wrap: wrap;
+    }
+    .img-box {
+        width: 100%;
+        height: auto;
+    }
+    .detail__info {
+        padding: 30px 10px;
+        width: 100%;
+    }
+    .detail__genre {
+        padding: 15px 0px;
+    }
+}
+
+@media (max-width: 768px) {
+    .search-container {
+        flex-direction: row;
+    }
+
+    h1 {
+        display: flex;
+        font-size: 50px;
+    }
+
+    .navbar {
+        flex-direction: column;
+        height: auto;
+        padding: 3rem;
+    }
+
+    .navbar-left {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+
+    .navbar-title {
+        margin-right: 1px;
+        font-size: 1rem;
+    }
+
+    .navbar-links {
+        flex-direction: row;
+        gap: 5px;
+    }
+
+    .search-input {
+        width: 100%;
+        max-width: 175px;
+    }
+
+    .search-button {
+        width: 50px;
+    }
+
+    .detail__button {
+        width: 50%;
+    }
+
+    .switch {
+        margin-left: 0;
+        margin-top: 1rem;
+    }
 }
