--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,7 +6,6 @@
     height: 100vh;
     margin: 0;
     background-color: #2a2a2a;
-    font-family: 'Poppins', sans-serif;
 }
 
 .login-form {
@@ -18,6 +17,7 @@
 }
 
 .login-form h2 {
+    background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
     margin-bottom: 1.5rem;
@@ -49,12 +49,6 @@
     font-size: 1rem;
     color: #999;
     transition: all 0.3s;
-}
-
-.form-group input:focus + label,
-.form-group input:not(:placeholder-shown) + label {
-    top: -0.5rem;
-    font-size: 0.8rem;
 }
 
 .login-form button {
