--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -15,12 +15,16 @@
 .img-box {
     width: 50%;
     height: 100%;
+    position: relative;
 }
+
 .detail__img {
     width: 80%;
     height: 100%;
     border-radius: 12px;
     object-fit: cover;
+    animation: fadeIn 0.25s ease-in-out forwards;
+    opacity: 0;
 }
 
 .detail__info {
@@ -28,6 +32,17 @@
     font-size: 25px;
     padding: 30px 0 10px 30px;
     width: 50%;
+    animation: fadeIn 0.25s ease-in-out forwards;
+    opacity: 0;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .detail__head {
@@ -41,6 +56,7 @@
     color: white;
     font-size: 70px;
 }
+
 .detail__genre {
     font-size: 20px;
     border-radius: 12px;
@@ -105,8 +121,7 @@
     border: 2px solid rgb(255, 255, 255);
     color: rgb(255, 255, 255);
 }
-
-@media screen and (max-width: 767px) {
+@media (max-width: 1024px) {
     .detail-container {
         flex-wrap: wrap;
     }
@@ -120,5 +135,55 @@
     }
     .detail__genre {
         padding: 15px 0px;
+    }
+}
+
+@media (max-width: 768px) {
+    .search-container {
+        flex-direction: row;
+    }
+
+    h1 {
+        display: flex;
+        font-size: 50px;
+    }
+
+    .navbar {
+        flex-direction: column;
+        height: auto;
+        padding: 3rem;
+    }
+
+    .navbar-left {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+
+    .navbar-title {
+        margin-right: 1px;
+        font-size: 1rem;
+    }
+
+    .navbar-links {
+        flex-direction: row;
+        gap: 5px;
+    }
+
+    .search-input {
+        width: 100%;
+        max-width: 175px;
+    }
+
+    .search-button {
+        width: 50px;
+    }
+
+    .detail__button {
+        width: 50%;
+    }
+
+    .switch {
+        margin-left: 0;
+        margin-top: 1rem;
     }
 }
