--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@
     position: relative;
     align-items: center;
     padding: 1rem 2rem;
-    background: linear-gradient(to bottom, #6a7c51, rgb(61, 76, 61));
+    background: linear-gradient(to bottom, #7c7f70, #51534a);
     color: white;
 }
 
