--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -5,19 +5,17 @@
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #2a2a2a;
 }
 
 .login-form {
     width: 400px;
     padding: 40px;
-    background-color: #2c2c2c; /* 약간 더 밝은 회색 배경 */
+    background-color: #2c2c2c;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .login-form h2 {
-    background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
     margin-bottom: 1.5rem;
