--- a/src/components/MovieBanner.css
+++ b/src/components/MovieBanner.css
@@ -1,30 +1,80 @@
-.slider {
-    width: 100vh;
-    height: auto;
+.movie-banner {
     position: relative;
+    border-radius: 30px;
+    width: calc(100% - 170px);
+    height: 700px;
     margin: 0 auto;
+    background-size: cover;
     overflow: hidden;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
+    animation: scaleBackground 3s ease-in-out; /* 애니메이션 적용 */
+    transition: transform 0.25s ease-in-out;
+}
+
+@keyframes scaleBackground {
+    0% {
+        background-size: 110%;
+        background-position-x: 0px;
+        background-position-y: 0px;
+    }
+    100% {
+        background-size: 100%;
+        background-position-x: 0;
+        background-position-y: 0;
+    }
+}
+
+.movie-banner:hover {
+    transform: scale(0.9);
+}
+
+.movie-banner:active {
+    transform: scale(0.8);
+}
+
+.movie-banner-overlay {
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 40px; /* 내부 여백을 더 넓게 설정 */
+    box-sizing: border-box;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
 }
 
-.slide img {
-    width: 100vw;
-    object-fit: cover;
+.movie-banner-content {
+    color: white;
+    z-index: 1;
 }
 
-.slide h3 {
-    position: absolute;
-    bottom: 50px;
-    padding-left: 30px;
-}
-.left-btn {
-    position: absolute;
-    padding: 5px 10px;
-    top: 50%;
+.movie-banner-title {
+    font-size: 3rem;
+    margin-bottom: 20px;
+    opacity: 0; /* 초기에 숨겨진 상태로 설정 */
+    transform: translateY(50px); /* 초기 위치를 아래로 이동 */
+    animation: slideUp 0.5s ease-in-out forwards; /* 애니메이션 적용 */
 }
 
-.right-btn {
-    position: absolute;
-    padding: 5px 10px;
-    top: 50%;
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.movie-banner-title h1 {
+    margin: 0;
+}
+
+.movie-banner-overview {
+    font-size: 1.5rem; /* 설명의 크기를 키움 */
+    margin-bottom: 30px; /* 설명과 하단 여백 사이의 간격을 늘림 */
+    animation: slideUp 1s ease-in-out forwards; /* 애니메이션 적용 */
 }
