--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@ main.container {
     display: flex;
 }
 
+body {
+    background: rgb(81, 83, 74);
+}
+
 .detail-container {
     background: rgb(81, 83, 74);
 }
