--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,6 @@
     align-items: center;
     height: 10rem;
     position: relative;
-    align-items: center;
     padding: 1rem 2rem;
     background: linear-gradient(to bottom, #7c7f70, #51534a);
     color: white;
@@ -47,11 +46,12 @@
     margin-left: 40px;
     align-items: right;
     gap: 20px;
+    
     background-color: transparent;
 }
 
 .navbar-links li {
-    background-color: transparent;
+
 }
 
 .navbar-links a {
@@ -59,12 +59,15 @@
     background-color: transparent;
     border-radius: 5px;
     text-decoration: none;
+    cursor: pointer;
     transition: 0.25s;
+    
 }
 
 .navbar-links a:hover {
     border: none;
     background-color: rgb(111, 84, 52);
+    
 }
 
 .navbar-links a:active {
@@ -115,73 +118,74 @@
     background-color: transparent;
 }
 
-.theme-toggle {
-    background-color: transparent;
-}
-
-.switch {
+.user-info {
+    display: flex;
+    align-items: center;
     position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin-left: 20px;
-    background-color: transparent;
 }
 
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
+.user-photo {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 34px;
 }
 
-.slider:before {
+.user-name {
+    color: white;
+    font-size: 1rem;
+}
+
+.dropdown-menu {
     position: absolute;
-    content: '';
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 50%;
+    z-index: 2;
+    top: 20px;
+    width: 170px;
+    left: 0;
+    background-color: #1a1a1a;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
 }
 
-input:checked + .slider {
-    background-color: #007bff;
+.user-info:hover .dropdown-menu {
+    display: block;
 }
 
-input:focus + .slider {
-    box-shadow: 0 0 1px #007bff;
+.menu-item {
+    display: block;
+    text-decoration: none;
+    padding: 8px 0;
+    transition: all 0.3s ease;
 }
 
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+.menu-item:hover {
+    background-color: #555; /* Darker background color on hover */
 }
 
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
+.menu-item:last-child {
+    margin-top: 5px;
 }
 
-.slider.round:before {
-    border-radius: 50%;
+.logout-button {
+    background-color: #333; /* Dark background color */
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    padding: 8px 16px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-top: 5px;
+    transition: background-color 0.3s ease;
 }
+
+.logout-button:hover {
+    background-color: #555; /* Darker background color on hover */
+}
+
 
 @media (max-width: 1024px) {
     .detail-container {
@@ -243,9 +247,3 @@ input:checked + .slider:before {
     .detail__button {
         width: 50%;
     }
-
-    .switch {
-        margin-left: 0;
-        margin-top: 1rem;
-    }
-}
