--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -21,6 +21,34 @@
     margin-bottom: 1.5rem;
 }
 
+/* 버튼 스타일 */
+.login-button,
+.google-login-button {
+    width: 100%; /* 버튼을 부모 요소의 너비만큼 채우기 */
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 4px;
+}
+
+.login-button {
+    background-color: #4783a1; /* Green */
+    color: white;
+}
+
+.google-login-button {
+    background-color: #ad655d; /* Google Blue */
+    color: white;
+    margin-top: 10px;
+}
+
+.login-button:hover,
+.google-login-button:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+}
+
 /* 폼 요소 스타일링 */
 .form-group {
     position: relative;
@@ -35,11 +63,6 @@
     font-size: 1rem;
 }
 
-.form-group input:focus {
-    outline: none;
-    border-color: #6a11cb;
-}
-
 .form-group label {
     position: absolute;
     left: 1rem;
@@ -47,18 +70,6 @@
     font-size: 1rem;
     color: #999;
     transition: all 0.3s;
-}
-
-.login-form button {
-    width: 100%;
-    padding: 0.8rem 1rem;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: transform 0.3s;
 }
 
 .login-form button:hover {
