--- a/src/components/SearchPage.css
+++ b/src/components/SearchPage.css
@@ -7,13 +7,17 @@
     justify-content: center;
 }
 
+.search-container h3 {
+    z-index: 2;
+}
+
 .card-box {
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
 
 .card-box:hover {
-    transform: scale(1.05);
+    transform: scale(1);
 }
 
 .no-results {
