--- a/src/components/MovieDetail.css
+++ b/src/components/MovieDetail.css
@@ -43,9 +43,14 @@ main {
     border-radius: 12px;
     object-fit: cover;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-    animation: scaleBackground 3s ease-in-out;
     animation: fadeIn 0.25s ease-in-out forwards;
     opacity: 0;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
 }
 
 .detail__info {
@@ -143,7 +148,6 @@ main {
     color: rgb(255, 255, 255);
     transition: transform 0.25s ease-in-out;
     transform: scale(1.1);
-    cursor: pointer;
 }
 
 .play-btn:active {
