--- a/src/components/MovieBanner.css
+++ b/src/components/MovieBanner.css
@@ -6,16 +6,16 @@
     margin: 0 auto;
     background-size: cover;
     overflow: hidden;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
-    animation: scaleBackground 3s ease-in-out; /* 애니메이션 적용 */
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    animation: scaleBackground 3s ease-in-out;
     transition: transform 0.25s ease-in-out;
 }
 
 @keyframes scaleBackground {
     0% {
         background-size: 110%;
-        background-position-x: 0px;
-        background-position-y: 0px;
+        background-position-x: 0;
+        background-position-y: 0;
     }
     100% {
         background-size: 100%;
@@ -25,11 +25,11 @@
 }
 
 .movie-banner:hover {
-    transform: scale(0.9);
+    transform: scale(1.03);
 }
 
 .movie-banner:active {
-    transform: scale(0.8);
+    transform: scale(0.97);
 }
 
 .movie-banner-overlay {
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding: 40px; /* 내부 여백을 더 넓게 설정 */
+    padding: 40px;
     box-sizing: border-box;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
 }
@@ -53,9 +53,9 @@
 .movie-banner-title {
     font-size: 3rem;
     margin-bottom: 20px;
-    opacity: 0; /* 초기에 숨겨진 상태로 설정 */
-    transform: translateY(50px); /* 초기 위치를 아래로 이동 */
-    animation: slideUp 0.5s ease-in-out forwards; /* 애니메이션 적용 */
+    opacity: 0;
+    transform: translateY(50px);
+    animation: slideUp 0.5s ease-in-out forwards;
 }
 
 @keyframes slideUp {
@@ -74,7 +74,48 @@
 }
 
 .movie-banner-overview {
-    font-size: 1.5rem; /* 설명의 크기를 키움 */
-    margin-bottom: 30px; /* 설명과 하단 여백 사이의 간격을 늘림 */
-    animation: slideUp 1s ease-in-out forwards; /* 애니메이션 적용 */
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+    animation: slideUp 1s ease-in-out forwards;
+}
+
+@media screen and (max-width: 768px) {
+    .movie-banner {
+        width: 90%;
+        height: 700px;
+        animation: scaleBackground2 3s ease-in-out;
+    }
+
+    @keyframes scaleBackground2 {
+        0% {
+            background-size: 120%;
+            background-position-x: 0;
+            background-position-y: 0;
+        }
+        100% {
+            background-size: 100%;
+            background-position-x: 0;
+            background-position-y: 0;
+        }
+    }
+
+    .movie-banner-content {
+        margin-top: 100px;
+        font-size: 1rem;
+    }
+    .movie-banner-title h1 {
+        font-size: 35px;
+    }
+    .movie-banner-overlay {
+        overflow: hidden;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 20px;
+        box-sizing: border-box;
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.235));
+    }
 }
