--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -17,6 +17,13 @@
     z-index: 2;
 }
 
+.title {
+    z-index: 3;
+    margin-top: 5px;
+    font-weight: bold; /* 필요에 따라 조정 */
+    color: #fff;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -27,7 +34,7 @@
 }
 
 .card-box img:hover {
-    transform: scale(1.1);
+    transform: scale(1.08);
 }
 
 .card-box img:active {
@@ -35,9 +42,10 @@
 }
 
 .card-box img {
-    max-height: 75%;
+    margin-top: 20px;
+    max-height: 170px;
     object-fit: cover;
-    border-radius: 30px;
+    border-radius: 15px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
     transition: transform 0.25s ease-in-out;
 }
@@ -70,20 +78,24 @@
 }
 
 .card-box p {
+    margin: 0;
+    text-align: center;
     color: rgb(255, 255, 255);
     font-weight: 500;
 }
 
 h3 {
+    margin: 0;
+    text-align: center;
     color: white;
 }
 
 @media screen and (max-width: 768px) {
     .card-box {
-        width: 100%;
+        width: 55%;
     }
 
     .card-box img {
-        max-height: 63%;
+        max-height: 150px;
     }
 }
