--- a/src/components/LoginPage.css
+++ b/src/components/LoginPage.css
@@ -1,4 +1,3 @@
-/* 배경 및 레이아웃 */
 .login-form-container {
     display: flex;
     justify-content: center;
@@ -22,10 +21,9 @@
     margin-bottom: 1.5rem;
 }
 
-/* 버튼 스타일 */
 .login-button,
 .google-login-button {
-    width: 100%; /* 버튼을 부모 요소의 너비만큼 채우기 */
+    width: 100%;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
@@ -60,7 +58,6 @@
     transform: scale(1);
 }
 
-/* 폼 요소 스타일링 */
 .form-group {
     position: relative;
     margin-bottom: 1rem;
