--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -20,7 +20,7 @@
 .title {
     z-index: 3;
     margin-top: 5px;
-    font-weight: bold; /* 필요에 따라 조정 */
+    font-weight: bold;
     color: #fff;
 }
 
@@ -43,10 +43,10 @@
 
 .card-box img {
     margin-top: 20px;
-    max-height: 170px;
+    max-height: 150px;
     object-fit: cover;
     border-radius: 15px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* 그림자 효과 추가 */
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
     transition: transform 0.25s ease-in-out;
 }
 
@@ -55,7 +55,7 @@
     margin: 10px;
     padding: 20px;
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
