--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,21 +5,25 @@
 
 .navbar {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 10rem;
-    position: relative;
+    height: auto;
     padding: 1rem 2rem;
-    background: linear-gradient(to bottom, rgb(42, 42, 45), rgb(24, 26, 35));
+    /* background: linear-gradient(to bottom, rgb(30, 30, 37), rgb(20, 21, 28)); */
     color: white;
 }
 
-.navbar-left {
+.navbar-top {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.navbar-logo-title {
     display: flex;
     align-items: center;
-    transform: scale(1.1);
-    margin-right: 80px;
-    background-color: transparent;
 }
 
 .navbar-logo {
@@ -35,6 +39,7 @@
 }
 
 .navbar-title {
+    letter-spacing: -1px;
     font-size: 1.5rem;
     margin: 0;
     transition: 0.25s;
@@ -48,24 +53,30 @@
 .navbar-links {
     list-style: none;
     display: flex;
-    margin-left: 40px;
-    align-items: center;
     gap: 20px;
     background-color: transparent;
 }
 
 .navbar-links a {
     color: white;
+    font-size: 20px;
     background-color: transparent;
     border-radius: 5px;
     text-decoration: none;
     cursor: pointer;
     transition: 0.25s;
+    display: flex;
+    align-items: center;
+}
+
+.navbar-links a .icon {
+    margin-right: 8px;
 }
 
 .navbar-links a:hover {
     border: none;
     background-color: rgb(111, 84, 52);
+    text-decoration: underline;
 }
 
 .navbar-links a:active {
@@ -77,6 +88,7 @@
     justify-content: center;
     align-items: center;
     background-color: transparent;
+    margin-bottom: 1rem;
 }
 
 .search-input {
@@ -84,13 +96,13 @@
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 200px;
+    width: 300px;
     margin-right: 10px;
     transition: 0.25s ease-in-out;
 }
 
 .search-input:hover {
-    width: 300px;
+    width: 400px;
 }
 
 .search-button {
@@ -159,7 +171,7 @@
 }
 
 .menu-item:hover {
-    background-color: #555; /* Darker background color on hover */
+    background-color: #555;
 }
 
 .menu-item:last-child {
@@ -167,7 +179,7 @@
 }
 
 .logout-button {
-    background-color: #333; /* Dark background color */
+    background-color: #333;
     color: white;
     border: none;
     cursor: pointer;
@@ -181,67 +193,5 @@
 }
 
 .logout-button:hover {
-    background-color: #555; /* Darker background color on hover */
-}
-
-@media (max-width: 1024px) {
-    .detail-container {
-        flex-wrap: wrap;
-    }
-    .img-box {
-        width: 100%;
-        height: auto;
-    }
-    .detail__info {
-        padding: 30px 10px;
-        width: 100%;
-    }
-    .detail__genre {
-        padding: 15px 0px;
-    }
-}
-
-@media (max-width: 768px) {
-    .search-container {
-        flex-direction: row;
-    }
-
-    h1 {
-        display: flex;
-        font-size: 50px;
-    }
-
-    .navbar {
-        flex-direction: column;
-        height: auto;
-        padding: 3rem;
-    }
-
-    .navbar-left {
-        margin-right: 0;
-        margin-bottom: 1rem;
-    }
-
-    .navbar-title {
-        margin-right: 1px;
-        font-size: 1rem;
-    }
-
-    .navbar-links {
-        flex-direction: row;
-        gap: 5px;
-    }
-
-    .search-input {
-        width: 100%;
-        max-width: 175px;
-    }
-
-    .search-button {
-        width: 50px;
-    }
-
-    .detail__button {
-        width: 50%;
-    }
+    background-color: #555;
 }
