--- a/src/components/SignupPage.css
+++ b/src/components/SignupPage.css
@@ -5,13 +5,13 @@
     justify-content: center;
     height: 100vh;
 
-    color: #fff; /* 흰색 텍스트 */
+    color: #fff;
 }
 
 .signup-form {
     width: 400px;
     padding: 40px;
-    background-color: #2c2c2c; /* 약간 더 밝은 회색 배경 */
+    background-color: #2c2c2c;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
