--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,56 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .App {
-    /* background: rgba(31, 33, 44, 0.5); 반투명 배경색 */
-    padding: 20px;
-    border-radius: 10px;
+  /* background: rgba(31, 33, 44, 0.5); 반투명 배경색 */
+  padding: 20px;
+  border-radius: 10px;
 }
 
 main {
-    /* background: linear-gradient(to bottom, rgb(39, 46, 77), rgb(8, 10, 19)); */
-    backdrop-filter: blur(8px);
-    padding: 20px;
-    border-radius: 10px;
+  /* background: linear-gradient(to bottom, rgb(39, 46, 77), rgb(8, 10, 19)); */
+  backdrop-filter: blur(8px);
+  padding: 20px;
+  border-radius: 10px;
 }
 
 main.container {
-    background: linear-gradient(to bottom, rgb(39, 46, 77), rgb(33, 34, 40));
-    justify-content: center;
-    margin: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-    flex-wrap: wrap;
-    display: flex;
-    backdrop-filter: blur(8px);
-    padding: 20px;
-    border-radius: 10px;
+  background: linear-gradient(to bottom, rgb(39, 46, 77), rgb(33, 34, 40));
+  justify-content: center;
+  margin: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  flex-wrap: wrap;
+  display: flex;
+  backdrop-filter: blur(8px);
+  padding: 20px;
+  border-radius: 10px;
 }
 
 body {
-    background: linear-gradient(to bottom, rgb(20, 22, 30), rgb(39, 46, 77)); /* 배경 그라데이션 */
-    backdrop-filter: blur(8px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background: linear-gradient(
+    to bottom,
+    rgb(20, 22, 30),
+    rgb(39, 46, 77)
+  ); /* 배경 그라데이션 */
+  backdrop-filter: blur(8px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .detail-container {
-    background: rgba(21, 28, 58, 0.5);
-    backdrop-filter: blur(8px);
-    padding: 20px;
-    border-radius: 10px;
+  background: rgba(21, 28, 58, 0.5);
+  backdrop-filter: blur(8px);
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .signup-container {
-    background: rgba(21, 28, 58, 0.5);
-    backdrop-filter: blur(8px);
-    padding: 20px;
-    border-radius: 10px;
+  background: rgba(21, 28, 58, 0.5);
+  backdrop-filter: blur(8px);
+  padding: 20px;
+  border-radius: 10px;
 }
